# pyBregMan

./: .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  scratch.py  scratch2.py  setup.py
bregman/: base.py  constants.py
bregman/application/: application.py
bregman/application/distribution/: distribution.py
bregman/application/distribution/exponential_family/: exp_family.py
bregman/application/distribution/mixture/: mixture.py
bregman/application/psd/: __init__.py  psd.py
bregman/ball/: base.py  bregman.py  parameterized.py
bregman/barycenter/: base.py  bregman.py
bregman/dissimilarity/: base.py  bregman.py  gaussian.py
bregman/distance/: base.py  bregman.py  gaussian.py
bregman/generator/: generator.py
bregman/geodesic/: base.py  flat_geodesic.py  gaussian.py
bregman/manifold/: Gaussian1D.py  application.py  ball.py  bisector.py  connection.py  coordinate.py  coords.py  generator.py  geodesic.py  manifold.py  normal.py  parallel_transport.py  psd.py
bregman/manifold/distribution/: distribution.py
bregman/object/: distribution.py
bregman/visualizer/: matplotlib.py  visualizer.py
bregman/visualizer/matplotlib/: __init__.py  callback.py  matplotlib.py
docs/: requirements.txt
docs/source/: bregman.application.distribution.exponential_family.categorical.rst  bregman.application.distribution.exponential_family.gaussian.rst  bregman.application.distribution.exponential_family.multinomial.rst  bregman.application.distribution.exponential_family.rst  bregman.application.distribution.mixture.discrete_mixture.rst  bregman.application.distribution.mixture.ef_mixture.rst  bregman.application.distribution.mixture.rst  bregman.application.distribution.rst  bregman.application.psd.rst  bregman.application.rst  bregman.ball.rst  bregman.barycenter.rst  bregman.dissimilarity.rst  bregman.manifold.rst  bregman.object.rst  bregman.rst  bregman.visualizer.matplotlib.rst  bregman.visualizer.rst  conf.py  index.rst
examples/: ahg.py  ahm.py  ahm_psd.py  bball.py  bball_2.py  categorical.py  centroids.py  chernoff.py  crlb.py  gaussian.py  gaussian_fisherrao.py  gaussian_fisherrao_ahg.py  getting_started.py  grey_hist.py  histogram_centroid.py  logo.py  multinomial.py  normal.py  psd.py  scratch.py  scratch3.py  soft_cluster.py  trinomial.py
tests/: test_bregman_divergence.py
(+23 files in other folders)
