[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bregman"]

[project]
name = "pyBregMan"
version = "0.0.3"
dependencies = [
    "numpy<2.0.0",
    "matplotlib",
    "scipy",
    "autograd",
]
requires-python = ">=3.8"
authors = [
  { name="alexandersoen", email="alexandersoen@gmail.com" },
]
description = "A Python library for geometric computing on BREGman MANifolds with applications"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/alexandersoen/pyBregMan"
Issues = "https://github.com/alexandersoen/pyBregMan/issues"
