[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["bregman*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[project]
name = "pyBregMan"
version = "0.0.4"
dependencies = [
    "numpy<2.0.0",
    "matplotlib",
    "scipy",
    "autograd",
]
requires-python = ">=3.8"
authors = [
  { name="alexandersoen", email="alexandersoen@gmail.com" },
]
description = "A Python library for geometric computing on BREGman MANifolds with applications."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://franknielsen.github.io/pyBregMan/index.html"
Documentation = "https://pybregman.readthedocs.io/en/latest"
Repository = "https://github.com/alexandersoen/pyBregMan"
Issues = "https://github.com/alexandersoen/pyBregMan/issues"
